src/test/ui/coherence/coherence_copy_like_err_tuple.old.stderr
error[E0119]: conflicting implementations of trait `MyTrait` for type `(MyType,)`:
  --> $DIR/coherence_copy_like_err_tuple.rs:21:1
   |
LL | impl<T: lib::MyCopy> MyTrait for T { }
   | ---------------------------------- first implementation here
...
LL | impl MyTrait for (MyType,) { }
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `(MyType,)`
   |
   = note: upstream crates may add new impl of trait `lib::MyCopy` for type `(MyType,)` in future versions

error: aborting due to previous error

For more information about this error, try `rustc --explain E0119`.
